Title button wrapping correctly

--- a/src/css/plan.css
+++ b/src/css/plan.css
@@ -1,73 +1,3 @@
-#fp-stats-container {
-    flex: auto;
-    flex-grow: 0;
-    display: flex;
-    flex-direction: column;
-    padding: 0.5em;
-    border-bottom: 2px solid black;
-}
-
-#fp-stats {
-    flex: auto;
-    flex-grow: 0;
-    display: flex;
-    flex-direction: column;
-}
-
-.fp-stats-title {
-    text-align: center;
-    font-weight: bold;
-    background-color: black;
-    color: white;
-    display: flex;
-}
-
-.fp-stats-title-button {
-    flex: auto;
-    flex-grow: 0;
-    margin-left: 0.5em;
-}
-
-.fp-stats-title-label {
-    flex: auto;
-}
-
-#fp-stats-options, #fp-stats-results {
-    flex: auto;
-    display: grid;
-    /* flex-direction: column; */
-    grid-template-columns: 50% 50%;
-    padding: 0.5em;
-    overflow: scroll;
-}
-
-.fp-stats-options-label, .fp-stats-options-value,
-.fp-stats-content-label, .fp-stats-content-value {
-    display: block;
-    margin-top: 0.2em;
-}
-
-.fp-stats-options-value-center, .fp-stats-content-value-center {
-    text-align: center;
-}
-
-.fp-stats-options-value-right, .fp-stats-content-value-right {
-    text-align: right;
-}
-
-/* .fp-stats-option-label {
-    flex: auto;
-}
-
-.fp-stats-option-value {
-    flex: auto;
-    max-width: 5em;
-} */
-
-.fp-stats-option-content-subtitle {
-    font-weight: bold;
-}
-
 #fp-mission {
     flex: auto;
     display: flex;
@@ -114,6 +44,15 @@
     flex: auto;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+}
+
+.mission-feature-title-button-container {
+    flex: auto;
+    flex-grow: 0;
+    display: flex;
+    flex-direction: row;
 }
 
 .mission-feature-title-button,
@@ -155,24 +94,5 @@
 }
 
 .mission-feature-content-value-right {
-    text-align: right;
-}
-
-.brief-table {
-    display: grid;
-    grid-template-columns: auto auto auto auto auto auto;
-    font-size: x-small;
-}
-
-.brief-table-entry {
-    display: grid;
-    grid-template-columns: auto auto auto auto auto auto;
-}
-
-.brief-table-entry-header {
-    font-weight: bold;
-}
-
-.brief-table-entry-right {
     text-align: right;
 }
